grammar/parser.output
Terminals unused in grammar

    "%="


Grammar

    0 $accept: Program $end

    1 Program: $end
    2        | Statements $end

    3 Statements: Statement
    4           | Statements Statement

    5 Statement: ";"
    6          | Expr ";"
    7          | "(" Expr ")"
    8          | "return" Expr ";"
    9          | "return" ";"
   10          | If_Stm
   11          | While_Stm
   12          | For_Stm
   13          | Print ";"

   14 Scope: StartScope Statements EndScope
   15      | StartScope EndScope

   16 StartScope: "{"

   17 EndScope: "}"

   18 If_Stm: "if" "(" Expr ")" Scope
   19       | "if" "(" Expr ")" Scope "else" Scope

   20 For_Stm: "for" "(" Assign ";" Expr ";" Assign ")" Scope

   21 While_Stm: "while" "(" Expr ")" Scope

   22 Assign: Variable "=" Expr
   23       | Variable "+=" Expr
   24       | Variable "-=" Expr
   25       | Variable "*=" Expr
   26       | Variable "/=" Expr

   27 Print: "print" Expr

   28 Expr: Postfix
   29     | BinaryOp
   30     | UnaryOp
   31     | Assign

   32 BinaryOp: Expr "+" Expr
   33         | Expr "-" Expr
   34         | Expr "*" Expr
   35         | Expr "/" Expr
   36         | Expr ">" Expr
   37         | Expr "<" Expr
   38         | Expr ">=" Expr
   39         | Expr "<=" Expr
   40         | Expr "==" Expr
   41         | Expr "!=" Expr
   42         | Expr "&&" Expr
   43         | Expr "||" Expr
   44         | Expr "&" Expr
   45         | Expr "|" Expr
   46         | Expr "%" Expr

   47 UnaryOp: "-" Expr
   48        | "!" Expr

   49 Variable: "identifier"

   50 ArgListOpt: ε
   51           | ArgList

   52 ArgList: Expr
   53        | ArgList "," Expr

   54 ParamListOpt: ε
   55             | ParamList

   56 ParamList: "identifier"
   57          | ParamList "," "identifier"

   58 NameOpt: ε
   59        | ":" "identifier"

   60 FunctionLit: "func" "(" ParamListOpt ")" NameOpt Scope

   61 Primary: "number"
   62        | "?"
   63        | Variable
   64        | Scope
   65        | FunctionLit

   66 Postfix: Primary
   67        | Postfix "(" ArgListOpt ")"


Terminals, with rules where they appear

    $end (0) 0 1 2
    error (256)
    "=" (258) 22
    "+=" (259) 23
    "-=" (260) 24
    "*=" (261) 25
    "/=" (262) 26
    "-" (263) 33 47
    "+" (264) 32
    "*" (265) 34
    "/" (266) 35
    "(" (267) 7 18 19 20 21 60 67
    ")" (268) 7 18 19 20 21 60 67
    "?" (269) 62
    "print" (270) 27
    "{" (271) 16
    "}" (272) 17
    ";" (273) 5 6 8 9 13 20
    "if" (274) 18 19
    "else" (275) 19
    "while" (276) 21
    "for" (277) 20
    ">" (278) 36
    "<" (279) 37
    ">=" (280) 38
    "<=" (281) 39
    "==" (282) 40
    "!=" (283) 41
    "!" (284) 48
    "%" (285) 46
    "&&" (286) 42
    "||" (287) 43
    "&" (288) 44
    "|" (289) 45
    "func" (290) 60
    "return" (291) 8 9
    ":" (292) 59
    "," (293) 53 57
    "identifier" <std::string> (294) 49 56 57 59
    "number" <int> (295) 61
    IFX (296)
    "%=" (297)
    UMINUS (298)


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    Program (45)
        on left: 1 2
        on right: 0
    Statements (46)
        on left: 3 4
        on right: 2 4 14
    Statement <AST::StatementNode*> (47)
        on left: 5 6 7 8 9 10 11 12 13
        on right: 3 4
    Scope <AST::ScopeNode*> (48)
        on left: 14 15
        on right: 18 19 20 21 60 64
    StartScope (49)
        on left: 16
        on right: 14 15
    EndScope (50)
        on left: 17
        on right: 14 15
    If_Stm <AST::IfNode*> (51)
        on left: 18 19
        on right: 10
    For_Stm <AST::ForNode*> (52)
        on left: 20
        on right: 12
    While_Stm <AST::WhileNode*> (53)
        on left: 21
        on right: 11
    Assign <AST::AssignNode*> (54)
        on left: 22 23 24 25 26
        on right: 20 31
    Print <AST::PrintNode*> (55)
        on left: 27
        on right: 13
    Expr <AST::ExpressionNode*> (56)
        on left: 28 29 30 31
        on right: 6 7 8 18 19 20 21 22 23 24 25 26 27 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 52 53
    BinaryOp <AST::BinaryOpNode*> (57)
        on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46
        on right: 29
    UnaryOp <AST::UnaryOpNode*> (58)
        on left: 47 48
        on right: 30
    Variable <AST::VariableNode*> (59)
        on left: 49
        on right: 22 23 24 25 26 63
    ArgListOpt <std::vector<AST::ExpressionNode*>> (60)
        on left: 50 51
        on right: 67
    ArgList <std::vector<AST::ExpressionNode*>> (61)
        on left: 52 53
        on right: 51 53
    ParamListOpt <std::vector<std::string>> (62)
        on left: 54 55
        on right: 60
    ParamList <std::vector<std::string>> (63)
        on left: 56 57
        on right: 55 57
    NameOpt <std::string> (64)
        on left: 58 59
        on right: 60
    FunctionLit <AST::FunctionNode*> (65)
        on left: 60
        on right: 65
    Primary <AST::ExpressionNode*> (66)
        on left: 61 62 63 64 65
        on right: 66
    Postfix <AST::ExpressionNode*> (67)
        on left: 66 67
        on right: 28 67


State 0

    0 $accept: • Program $end

    $end          shift, and go to state 1
    "-"           shift, and go to state 2
    "("           shift, and go to state 3
    "?"           shift, and go to state 4
    "print"       shift, and go to state 5
    "{"           shift, and go to state 6
    ";"           shift, and go to state 7
    "if"          shift, and go to state 8
    "while"       shift, and go to state 9
    "for"         shift, and go to state 10
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "return"      shift, and go to state 13
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Program      go to state 16
    Statements   go to state 17
    Statement    go to state 18
    Scope        go to state 19
    StartScope   go to state 20
    If_Stm       go to state 21
    For_Stm      go to state 22
    While_Stm    go to state 23
    Assign       go to state 24
    Print        go to state 25
    Expr         go to state 26
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 1

    1 Program: $end •

    $default  reduce using rule 1 (Program)


State 2

   47 UnaryOp: "-" • Expr

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 33
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 3

    7 Statement: "(" • Expr ")"

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 34
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 4

   62 Primary: "?" •

    $default  reduce using rule 62 (Primary)


State 5

   27 Print: "print" • Expr

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 35
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 6

   16 StartScope: "{" •

    $default  reduce using rule 16 (StartScope)


State 7

    5 Statement: ";" •

    $default  reduce using rule 5 (Statement)


State 8

   18 If_Stm: "if" • "(" Expr ")" Scope
   19       | "if" • "(" Expr ")" Scope "else" Scope

    "("  shift, and go to state 36


State 9

   21 While_Stm: "while" • "(" Expr ")" Scope

    "("  shift, and go to state 37


State 10

   20 For_Stm: "for" • "(" Assign ";" Expr ";" Assign ")" Scope

    "("  shift, and go to state 38


State 11

   48 UnaryOp: "!" • Expr

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 39
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 12

   60 FunctionLit: "func" • "(" ParamListOpt ")" NameOpt Scope

    "("  shift, and go to state 40


State 13

    8 Statement: "return" • Expr ";"
    9          | "return" • ";"

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    ";"           shift, and go to state 41
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 42
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 14

   49 Variable: "identifier" •

    $default  reduce using rule 49 (Variable)


State 15

   61 Primary: "number" •

    $default  reduce using rule 61 (Primary)


State 16

    0 $accept: Program • $end

    $end  shift, and go to state 43


State 17

    2 Program: Statements • $end
    4 Statements: Statements • Statement

    $end          shift, and go to state 44
    "-"           shift, and go to state 2
    "("           shift, and go to state 3
    "?"           shift, and go to state 4
    "print"       shift, and go to state 5
    "{"           shift, and go to state 6
    ";"           shift, and go to state 7
    "if"          shift, and go to state 8
    "while"       shift, and go to state 9
    "for"         shift, and go to state 10
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "return"      shift, and go to state 13
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Statement    go to state 45
    Scope        go to state 19
    StartScope   go to state 20
    If_Stm       go to state 21
    For_Stm      go to state 22
    While_Stm    go to state 23
    Assign       go to state 24
    Print        go to state 25
    Expr         go to state 26
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 18

    3 Statements: Statement •

    $default  reduce using rule 3 (Statements)


State 19

   64 Primary: Scope •

    $default  reduce using rule 64 (Primary)


State 20

   14 Scope: StartScope • Statements EndScope
   15      | StartScope • EndScope

    "-"           shift, and go to state 2
    "("           shift, and go to state 3
    "?"           shift, and go to state 4
    "print"       shift, and go to state 5
    "{"           shift, and go to state 6
    "}"           shift, and go to state 46
    ";"           shift, and go to state 7
    "if"          shift, and go to state 8
    "while"       shift, and go to state 9
    "for"         shift, and go to state 10
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "return"      shift, and go to state 13
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Statements   go to state 47
    Statement    go to state 18
    Scope        go to state 19
    StartScope   go to state 20
    EndScope     go to state 48
    If_Stm       go to state 21
    For_Stm      go to state 22
    While_Stm    go to state 23
    Assign       go to state 24
    Print        go to state 25
    Expr         go to state 26
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 21

   10 Statement: If_Stm •

    $default  reduce using rule 10 (Statement)


State 22

   12 Statement: For_Stm •

    $default  reduce using rule 12 (Statement)


State 23

   11 Statement: While_Stm •

    $default  reduce using rule 11 (Statement)


State 24

   31 Expr: Assign •

    $default  reduce using rule 31 (Expr)


State 25

   13 Statement: Print • ";"

    ";"  shift, and go to state 49


State 26

    6 Statement: Expr • ";"
   32 BinaryOp: Expr • "+" Expr
   33         | Expr • "-" Expr
   34         | Expr • "*" Expr
   35         | Expr • "/" Expr
   36         | Expr • ">" Expr
   37         | Expr • "<" Expr
   38         | Expr • ">=" Expr
   39         | Expr • "<=" Expr
   40         | Expr • "==" Expr
   41         | Expr • "!=" Expr
   42         | Expr • "&&" Expr
   43         | Expr • "||" Expr
   44         | Expr • "&" Expr
   45         | Expr • "|" Expr
   46         | Expr • "%" Expr

    "-"   shift, and go to state 50
    "+"   shift, and go to state 51
    "*"   shift, and go to state 52
    "/"   shift, and go to state 53
    ";"   shift, and go to state 54
    ">"   shift, and go to state 55
    "<"   shift, and go to state 56
    ">="  shift, and go to state 57
    "<="  shift, and go to state 58
    "=="  shift, and go to state 59
    "!="  shift, and go to state 60
    "%"   shift, and go to state 61
    "&&"  shift, and go to state 62
    "||"  shift, and go to state 63
    "&"   shift, and go to state 64
    "|"   shift, and go to state 65


State 27

   29 Expr: BinaryOp •

    $default  reduce using rule 29 (Expr)


State 28

   30 Expr: UnaryOp •

    $default  reduce using rule 30 (Expr)


State 29

   22 Assign: Variable • "=" Expr
   23       | Variable • "+=" Expr
   24       | Variable • "-=" Expr
   25       | Variable • "*=" Expr
   26       | Variable • "/=" Expr
   63 Primary: Variable •

    "="   shift, and go to state 66
    "+="  shift, and go to state 67
    "-="  shift, and go to state 68
    "*="  shift, and go to state 69
    "/="  shift, and go to state 70

    $default  reduce using rule 63 (Primary)


State 30

   65 Primary: FunctionLit •

    $default  reduce using rule 65 (Primary)


State 31

   66 Postfix: Primary •

    $default  reduce using rule 66 (Postfix)


State 32

   28 Expr: Postfix •
   67 Postfix: Postfix • "(" ArgListOpt ")"

    "("  shift, and go to state 71

    $default  reduce using rule 28 (Expr)


State 33

   32 BinaryOp: Expr • "+" Expr
   33         | Expr • "-" Expr
   34         | Expr • "*" Expr
   35         | Expr • "/" Expr
   36         | Expr • ">" Expr
   37         | Expr • "<" Expr
   38         | Expr • ">=" Expr
   39         | Expr • "<=" Expr
   40         | Expr • "==" Expr
   41         | Expr • "!=" Expr
   42         | Expr • "&&" Expr
   43         | Expr • "||" Expr
   44         | Expr • "&" Expr
   45         | Expr • "|" Expr
   46         | Expr • "%" Expr
   47 UnaryOp: "-" Expr •

    $default  reduce using rule 47 (UnaryOp)


State 34

    7 Statement: "(" Expr • ")"
   32 BinaryOp: Expr • "+" Expr
   33         | Expr • "-" Expr
   34         | Expr • "*" Expr
   35         | Expr • "/" Expr
   36         | Expr • ">" Expr
   37         | Expr • "<" Expr
   38         | Expr • ">=" Expr
   39         | Expr • "<=" Expr
   40         | Expr • "==" Expr
   41         | Expr • "!=" Expr
   42         | Expr • "&&" Expr
   43         | Expr • "||" Expr
   44         | Expr • "&" Expr
   45         | Expr • "|" Expr
   46         | Expr • "%" Expr

    "-"   shift, and go to state 50
    "+"   shift, and go to state 51
    "*"   shift, and go to state 52
    "/"   shift, and go to state 53
    ")"   shift, and go to state 72
    ">"   shift, and go to state 55
    "<"   shift, and go to state 56
    ">="  shift, and go to state 57
    "<="  shift, and go to state 58
    "=="  shift, and go to state 59
    "!="  shift, and go to state 60
    "%"   shift, and go to state 61
    "&&"  shift, and go to state 62
    "||"  shift, and go to state 63
    "&"   shift, and go to state 64
    "|"   shift, and go to state 65


State 35

   27 Print: "print" Expr •
   32 BinaryOp: Expr • "+" Expr
   33         | Expr • "-" Expr
   34         | Expr • "*" Expr
   35         | Expr • "/" Expr
   36         | Expr • ">" Expr
   37         | Expr • "<" Expr
   38         | Expr • ">=" Expr
   39         | Expr • "<=" Expr
   40         | Expr • "==" Expr
   41         | Expr • "!=" Expr
   42         | Expr • "&&" Expr
   43         | Expr • "||" Expr
   44         | Expr • "&" Expr
   45         | Expr • "|" Expr
   46         | Expr • "%" Expr

    "-"   shift, and go to state 50
    "+"   shift, and go to state 51
    "*"   shift, and go to state 52
    "/"   shift, and go to state 53
    ">"   shift, and go to state 55
    "<"   shift, and go to state 56
    ">="  shift, and go to state 57
    "<="  shift, and go to state 58
    "=="  shift, and go to state 59
    "!="  shift, and go to state 60
    "%"   shift, and go to state 61
    "&&"  shift, and go to state 62
    "||"  shift, and go to state 63
    "&"   shift, and go to state 64
    "|"   shift, and go to state 65

    $default  reduce using rule 27 (Print)


State 36

   18 If_Stm: "if" "(" • Expr ")" Scope
   19       | "if" "(" • Expr ")" Scope "else" Scope

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 73
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 37

   21 While_Stm: "while" "(" • Expr ")" Scope

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 74
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 38

   20 For_Stm: "for" "(" • Assign ";" Expr ";" Assign ")" Scope

    "identifier"  shift, and go to state 14

    Assign    go to state 75
    Variable  go to state 76


State 39

   32 BinaryOp: Expr • "+" Expr
   33         | Expr • "-" Expr
   34         | Expr • "*" Expr
   35         | Expr • "/" Expr
   36         | Expr • ">" Expr
   37         | Expr • "<" Expr
   38         | Expr • ">=" Expr
   39         | Expr • "<=" Expr
   40         | Expr • "==" Expr
   41         | Expr • "!=" Expr
   42         | Expr • "&&" Expr
   43         | Expr • "||" Expr
   44         | Expr • "&" Expr
   45         | Expr • "|" Expr
   46         | Expr • "%" Expr
   48 UnaryOp: "!" Expr •

    $default  reduce using rule 48 (UnaryOp)


State 40

   60 FunctionLit: "func" "(" • ParamListOpt ")" NameOpt Scope

    "identifier"  shift, and go to state 77

    $default  reduce using rule 54 (ParamListOpt)

    ParamListOpt  go to state 78
    ParamList     go to state 79


State 41

    9 Statement: "return" ";" •

    $default  reduce using rule 9 (Statement)


State 42

    8 Statement: "return" Expr • ";"
   32 BinaryOp: Expr • "+" Expr
   33         | Expr • "-" Expr
   34         | Expr • "*" Expr
   35         | Expr • "/" Expr
   36         | Expr • ">" Expr
   37         | Expr • "<" Expr
   38         | Expr • ">=" Expr
   39         | Expr • "<=" Expr
   40         | Expr • "==" Expr
   41         | Expr • "!=" Expr
   42         | Expr • "&&" Expr
   43         | Expr • "||" Expr
   44         | Expr • "&" Expr
   45         | Expr • "|" Expr
   46         | Expr • "%" Expr

    "-"   shift, and go to state 50
    "+"   shift, and go to state 51
    "*"   shift, and go to state 52
    "/"   shift, and go to state 53
    ";"   shift, and go to state 80
    ">"   shift, and go to state 55
    "<"   shift, and go to state 56
    ">="  shift, and go to state 57
    "<="  shift, and go to state 58
    "=="  shift, and go to state 59
    "!="  shift, and go to state 60
    "%"   shift, and go to state 61
    "&&"  shift, and go to state 62
    "||"  shift, and go to state 63
    "&"   shift, and go to state 64
    "|"   shift, and go to state 65


State 43

    0 $accept: Program $end •

    $default  accept


State 44

    2 Program: Statements $end •

    $default  reduce using rule 2 (Program)


State 45

    4 Statements: Statements Statement •

    $default  reduce using rule 4 (Statements)


State 46

   17 EndScope: "}" •

    $default  reduce using rule 17 (EndScope)


State 47

    4 Statements: Statements • Statement
   14 Scope: StartScope Statements • EndScope

    "-"           shift, and go to state 2
    "("           shift, and go to state 3
    "?"           shift, and go to state 4
    "print"       shift, and go to state 5
    "{"           shift, and go to state 6
    "}"           shift, and go to state 46
    ";"           shift, and go to state 7
    "if"          shift, and go to state 8
    "while"       shift, and go to state 9
    "for"         shift, and go to state 10
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "return"      shift, and go to state 13
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Statement    go to state 45
    Scope        go to state 19
    StartScope   go to state 20
    EndScope     go to state 81
    If_Stm       go to state 21
    For_Stm      go to state 22
    While_Stm    go to state 23
    Assign       go to state 24
    Print        go to state 25
    Expr         go to state 26
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 48

   15 Scope: StartScope EndScope •

    $default  reduce using rule 15 (Scope)


State 49

   13 Statement: Print ";" •

    $default  reduce using rule 13 (Statement)


State 50

   33 BinaryOp: Expr "-" • Expr

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 82
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 51

   32 BinaryOp: Expr "+" • Expr

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 83
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 52

   34 BinaryOp: Expr "*" • Expr

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 84
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 53

   35 BinaryOp: Expr "/" • Expr

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 85
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 54

    6 Statement: Expr ";" •

    $default  reduce using rule 6 (Statement)


State 55

   36 BinaryOp: Expr ">" • Expr

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 86
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 56

   37 BinaryOp: Expr "<" • Expr

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 87
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 57

   38 BinaryOp: Expr ">=" • Expr

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 88
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 58

   39 BinaryOp: Expr "<=" • Expr

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 89
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 59

   40 BinaryOp: Expr "==" • Expr

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 90
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 60

   41 BinaryOp: Expr "!=" • Expr

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 91
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 61

   46 BinaryOp: Expr "%" • Expr

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 92
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 62

   42 BinaryOp: Expr "&&" • Expr

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 93
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 63

   43 BinaryOp: Expr "||" • Expr

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 94
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 64

   44 BinaryOp: Expr "&" • Expr

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 95
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 65

   45 BinaryOp: Expr "|" • Expr

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 96
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 66

   22 Assign: Variable "=" • Expr

    "-"           shift, and go to state 2
    "?"           shift, and go to state 4
    "{"           shift, and go to state 6
    "!"           shift, and go to state 11
    "func"        shift, and go to state 12
    "identifier"  shift, and go to state 14
    "number"      shift, and go to state 15

    Scope        go to state 19
    StartScope   go to state 20
    Assign       go to state 24
    Expr         go to state 97
    BinaryOp     go to state 27
    UnaryOp      go to state 28
    Variable     go to state 29
    FunctionLit  go to state 30
    Primary      go to state 31
    Postfix      go to state 32


State 67

   23 Assign: Variable "+=" • Expr
